
// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto2";

package github.com.foenye.cloud_native_tour.crd_getting_started.pkg.apis.greeting.v2;

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "github.com/foenye/cloud-native-tour/crd-getting-started/pkg/apis/greeting/v2";

message Foo {
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional FooSpec spec = 2;

  optional FooStatus status = 3;
}

message FooCondition {
  optional string type = 1;

  optional string status = 2;
}

message FooConfig {
  // Message says hello world!
  optional string message = 1;

  // Description provides some verbose information
  // +optional
  optional string description = 2;
}

message FooList {
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated Foo items = 2;
}

message FooSpec {
  // Container image that the container is running to do our foo work
  optional string image = 1;

  // Config is the configuration used by foo container
  optional FooConfig config = 2;
}

message FooStatus {
  // The phase of a Foo is a simple, high-level summary of where the Foo is in its lifecycle
  // +optional
  optional string phase = 1;

  // Represents the latest available observations of a foo's current state
  // +optional
  // +patchMergeKey=type
  // +patchStrategy=merge
  repeated FooCondition conditions = 2;
}

